revision/LAMP-STACK/LB-security-gp.tf
# Security Groups
resource "aws_security_group" "web2_sg" {
  vpc_id = aws_vpc.vp1.id
  description = "Allow HTTP, HTTPS, and SSH"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "web1-security-group"
  }
    #depends_on = [ aws_vpc.vp1 ]
}
